--- a/templates/chat.html
+++ b/templates/chat.html
@@ -171,7 +171,7 @@
          
             let botMsg = document.createElement("div");
             botMsg.className = "message bot";
-            botMsg.innerText = "🤖 You said: " + msg;
+            botMsg.innerText = " You said: " + msg;
             chatBox.appendChild(botMsg);
 
             input.value = "";
